# set-mandelbrot

./: .gitignore  CMakeLists.txt  README.md  main.cu
